@@ -22,15 +22,14 @@
  |
  | $Id$
 -->
-
 <mosinstall type="component">
 	<name>Gallery</name>
 	<creationDate>February 2004</creationDate>
-	<author>Beckett Madden-Woods</author>
+	<author>Gallery Development Team</author>
 	<copyright>This component is released under the Gallery license (GNU General Public License)</copyright>
-	<authorEmail>beckett@beckettmw.com</authorEmail>
+	<authorEmail>gallery-devel@lists.sourceforge.net</authorEmail>
 	<authorUrl>gallery.sourceforge.net</authorUrl>
-	<version>1.0</version>
+	<version>1.4.5</version>
 	<description>Gallery Component For MOS 4.5 or newer</description>
 	<files>
 		<filename>gallery.php</filename>
@@ -69,18 +68,4 @@
 			<filename>images/logo-228x67.png</filename>
 		</images>
         </administration>
-</mosinstall>
-
-<mosinstall type="template">
-	<name>gallery_popup</name>
-	<creationDate>February 2004</creationDate>
-	<author>Beckett Madden-Woods</author>
-	<copyright>This template is released under the Gallery license (GNU General Public License)</copyright>
-	<authorEmail>beckett@beckettmw.com</authorEmail>
-	<authorUrl>gallery.sourceforge.net</authorUrl>
-	<version>1.0</version>
-	<description> Template for popup windows in Gallery Component for MOS 4.5 or newer</description>
-	<files>
-		<filename>gallery_popup.tpl.php</filename>
-	</files>
 </mosinstall>
