@@ -1,3 +1,8 @@
+2004-09-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b210
+
+	* Fix: Update the gallery.xml to work with Mambo 4.5.1
+	  (Mainly, remove the 'template' section)
+
 2004-09-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b209
 
 	* Change: Minor flow change in mambo section of init.php
